--- a/DynamixelPunTilt/puntilt_control/CMakeLists.txt
+++ b/DynamixelPunTilt/puntilt_control/CMakeLists.txt
@@ -22,7 +22,7 @@ find_package(catkin REQUIRED
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-catkin_python_setup()
+# catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -164,7 +164,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  scripts/tracking_target_color.py
+  scripts/tracking_target.py
+  scripts/detect_target_color.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
